Changes in project

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -6,21 +6,25 @@ html {
 }
 
 h1 {
-  color: #fff;
+  color: rgb(163, 92, 229);
   padding: 10px;
+}
+
+.batchdetails {
+  color: #00204a;
 }
 
 .box {
   font-family:Verdana, Geneva, Tahoma, sans-serif;
   max-width: 400px;
   margin: 50px auto;
-  background: rgb(198, 205, 212);
+  background: rgb(163, 92, 229);
   border-radius: 5px;
   box-shadow: 5px 5px 15px -5px rgba(0, 0, 0, 0.3);
 }
 
 #heading {
-  background-color: rgb(124, 124, 221);
+  background-color:rgb(163, 92, 229);
   text-align: center;
 }
 
@@ -28,21 +32,13 @@ h1 {
   min-height: 70px;
   display: flex;
   align-items: center;
-  border-bottom: 1px solid #F1F1F1;
+  border-bottom: 1px solid rgb(163, 92, 229);
 }
 
 .item:last-child {
   border-bottom: 0;
 }
 
-input:checked+p {
-  text-decoration: line-through;
-  text-decoration-color: #A683E3;
-}
-
-input[type="checkbox"] {
-  margin: 20px;
-}
 
 p {
   margin: 0;
@@ -57,23 +53,22 @@ form.item {
   margin-left: 20px;
 }
 
-.item button {
-  min-height: 50px;
-  height: 100%;
-  width: 100%;
+button {
   border-color: transparent;
   background-color: rgb(83, 83, 228);
   color: #fff;
   font-size: 30px;
-  padding-bottom: 6px;
   border-width: 0;
 }
 
 input[type="text"] {
+  margin-left: 40%;
   /* text-align: center; */
   height: 60px;
   top: 10px;
-  border: none;
+  padding: 5px;
+  margin: 5px;
+  color: #A683E3;
   background: transparent;
   font-size: 20px;
   font-weight: 200;
@@ -82,15 +77,11 @@ input[type="text"] {
 }
 
 input[type="text"]:focus {
-  width: 100%;
   outline: none;
-  box-shadow: inset 0 -3px 0 0 #A683E3;
+  box-shadow: inset 0 -3px 0 0 #733cd1;
 }
 
-
 ::placeholder {
-  width: 100%;
-  padding-left: 60px;
   text-decoration: #00204a;
   color: rgba(0, 0, 0, 0.698);
   opacity: 1;
@@ -103,6 +94,7 @@ footer {
   left: 0;
   bottom: 5%;
   width: 100%;
+  text-align: center;
 }
 
 * a{
