--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -3,7 +3,7 @@
 </body>
 
 <footer>
-
+ Copyright © 2022  | Made by <a href="https://www.linkedin.com/in/yashlakade/" target="_blank"> Yash Lakade </a> 
 </footer>
 
 </html>
