--- a/views/header.ejs
+++ b/views/header.ejs
@@ -3,8 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>To Do List App</title>
-  <title>Yoga Class Form</title>
+  <title>Immortal Registration</title>
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="css/styles.css">
